--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "velzon": {
+    "inspire": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/velzon",
+            "outputPath": "dist/inspire",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -127,10 +127,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "velzon:build:production"
+              "buildTarget": "inspire:build:production"
             },
             "development": {
-              "buildTarget": "velzon:build:development"
+              "buildTarget": "inspire:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -138,7 +138,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "velzon:build"
+            "buildTarget": "inspire:build"
           }
         },
         "test": {
