feat: Implement JWT-based authentication and authorization
This commit refactors the application to use JWT (JSON Web Token) for authentication and authorization, replacing the previous Firebase-based authentication and the deprecated `authUtils.ts` file.

Key changes include:

-   Removed `authUtils.ts` and related Firebase configuration.
-   Added `jwt-decode` package for decoding JWT tokens.
-   Updated `TokenService` to:
    -   Decode JWT tokens.
    -   Check if a token is valid based on its expiration time.
    -   Extract user permissions from the decoded token.
-   Updated `AuthGuard` to use `TokenService` to check for token validity instead of checking for a user in session storage.
-   Removed `FakeBackendInterceptor` and related configurations.
-   Removed Firebase configuration from `environment.ts` and `environment.prod.ts`.
-   Updated `app.module.ts` to remove the `FakeBackendInterceptor` and Firebase initialization.
-   Updated `package.json`, `package-lock.json`, and `yarn.lock` to include `jwt-decode`.
-   Updated `global-component.ts` to remove API_URL and AUTH_API.
-   Updated `topbar.component.ts` to set the language to "en" if cookie value is null.
-   Updated `index.html` to remove the base href.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "intersection-observer": "^0.12.2",
     "jasmine-core": "^5.1.2",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
