refactor: Migrate services to standalone and update imports
This commit refactors several services to be standalone and updates import paths to reflect the changes.

Key changes include:

-   Made `ApiHttpService`, `IdentityApiHttpService`, `LookUpService`, `LookUpApi`, `InstitutionService`, `UserService` standalone.
-   Updated import paths in `auth.interceptor.ts`, `jwt.interceptor.ts`, `error.interceptor.ts`, `topbar.component.ts`, `auth.guard.ts`, `account.module.ts`, `app.module.ts` and `register.component.ts` to reflect the new location of `TokenService`.
-   Updated models to use interfaces.
-   Updated `SimpleAlerts` to use `timer`
-   Updated `register.component.ts` to use `passwordMatchValidator`
-   Updated `register.component.ts` to use `Store`
-   Updated `login.component.ts` to use `Store`
-   Updated `login.component.html` to use `loading`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "bytecreed",
         "collapseid",
+        "français",
         "Swal",
         "sweetalert"
     ]
