feat: Remove cart and notification features from topbar
This commit removes the cart and notification features from the topbar component. The changes include:

- Removing the cart icon and related dropdown.
- Removing the notification icon and related dropdown.
- Removing the removeNotificationModal template.
- Removing the cart and notification related code from the topbar.component.html file.
- Adding "simplebar" to the cSpell.words in settings.json.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "bytecreed",
         "collapseid",
+        "flagvalue",
         "français",
+        "simplebar",
         "Swal",
         "sweetalert"
     ]
