feat: Remove cart and notification features from topbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "français",
         "simplebar",
         "Swal",
-        "sweetalert"
+        "sweetalert",
+        "topbar",
+        "valueset"
     ]
 }
