feat: Add general module and routing, update imports in existing modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
+        "angularx",
+        "apexcharts",
+        "asymmetrik",
         "bytecreed",
         "collapseid",
         "flagvalue",
         "français",
+        "lordicon",
         "simplebar",
         "Swal",
         "sweetalert",
