refactor: Clean up account routing module and update VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,13 @@
         "collapseid",
         "flagvalue",
         "français",
+        "lockscreen",
         "lordicon",
         "simplebar",
         "Swal",
         "sweetalert",
         "topbar",
+        "twostep",
         "valueset"
     ]
 }
