feat: Add Institution component and update routing in general module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,19 @@
         "apexcharts",
         "asymmetrik",
         "bytecreed",
+        "childitem",
+        "childrenitem",
         "collapseid",
         "flagvalue",
         "français",
+        "iconview",
         "lockscreen",
         "lordicon",
         "simplebar",
         "Swal",
         "sweetalert",
         "topbar",
+        "twocolumn",
         "twostep",
         "valueset"
     ]
