feat: Enhance institution handling by saving institution data on login and updating footer to display institution code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "iconview",
         "lockscreen",
         "lordicon",
+        "semibox",
         "simplebar",
         "Swal",
         "sweetalert",
