fix: Update breadcrumbs title and improve search input placeholder in institution component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,36 @@
 {
     "cSpell.words": [
+        "ACADEMICPERIODS",
+        "ACADEMICTERMS",
+        "ACADEMICYEARS",
         "alldata",
         "angularx",
         "apexcharts",
+        "artboard",
         "asymmetrik",
         "bytecreed",
         "childitem",
         "childrenitem",
         "collapseid",
+        "EXAMTYPES",
         "flagvalue",
         "français",
+        "GRADESETUP",
+        "GRADINGSYSTEMS",
         "iconview",
         "lockscreen",
         "lordicon",
+        "MANAGEUSERS",
+        "MASTERSHEETS",
+        "REGISTERRESULTS",
+        "REPORTCARDS",
+        "RESULTHISTORY",
         "semibox",
         "simplebar",
+        "STUDENTATTENDANCE",
         "Swal",
         "sweetalert",
+        "TEACHERATTENDANCE",
         "topbar",
         "twocolumn",
         "twostep",
