feat: Implement school and address models with corresponding services and forms in school component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "REGISTERRESULTS",
         "REPORTCARDS",
         "RESULTHISTORY",
+        "Rightsidebar",
         "semibox",
         "simplebar",
         "STUDENTATTENDANCE",
