feat: Update navigation labels in AdmissionComponent for clarity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "lordicon",
         "MANAGEUSERS",
         "MASTERSHEETS",
+        "Matricul",
         "REGISTERRESULTS",
         "REPORTCARDS",
         "RESULTHISTORY",
