--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^18.0.4",
     "@angular/forms": "^18.0.4",
     "@angular/google-maps": "^18.0.4",
+    "@angular/localize": "^18.0.4",
     "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^18.0.4",
     "@angular/platform-browser-dynamic": "^18.0.4",
@@ -42,6 +43,10 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@popperjs/core": "^2.11.8",
+    "@progress/kendo-angular-buttons": "^18.4.0",
+    "@progress/kendo-drawing": "^1.21.0",
+    "@progress/kendo-licensing": "^1.5.0",
+    "@progress/kendo-theme-default": "^10.3.1",
     "@types/google.maps": "^3.55.10",
     "@types/jasmine": "^5.1.4",
     "@types/prismjs": "^1.26.4",
@@ -59,9 +64,12 @@
     "firebase": "^10.12.2",
     "flatpickr": "^4.6.13",
     "fuzzy-search": "^3.2.1",
+    "html2canvas": "^1.4.1",
     "intersection-observer": "^0.12.2",
     "jasmine-core": "^5.1.2",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
@@ -108,6 +116,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.7",
+    "@types/pdfmake": "^0.2.11",
     "@types/quill": "^2.0.14",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
