feat: Implement Class Exam Types management
- Added functionality to retrieve, add, and delete Class Exam Types in ClassService.
- Updated ClassesComponent to handle Class Exam Types, including forms for adding and deleting exam types.
- Enhanced UI in classes.component.html to include a new tab for Class Exam Types with appropriate modals for adding and removing exam types.
- Introduced new methods for managing Class Exam Types, including selection of classes and handling form submissions.
- Updated generic-app-table to support dynamic table IDs for better identification.
- Minor adjustments to existing components for consistency and improved user experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,18 +12,28 @@
         "childitem",
         "childrenitem",
         "collapseid",
+        "Coverflow",
+        "coverflowslide",
+        "datatable",
+        "daygrid",
         "EXAMTYPES",
         "flagvalue",
+        "flatpickr",
         "français",
         "GRADESETUP",
         "GRADINGSYSTEMS",
+        "gridjs",
         "iconview",
+        "landingnft",
+        "listjs",
         "lockscreen",
         "lordicon",
         "MANAGEUSERS",
         "MASTERSHEETS",
         "Matricul",
+        "multimonth",
         "REGISTERRESULTS",
+        "remixicon",
         "REPORTCARDS",
         "RESULTHISTORY",
         "Rightsidebar",
