--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
               "node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/assets/scss/bootstrap.scss",
               "src/assets/scss/icons.scss",
-              "src/assets/scss/app.scss"
+              "src/assets/scss/app.scss",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts":[
               "node_modules/jquery/dist/jquery.min.js",
