feat: Add Subject management with service and model; enhance loading component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,18 +20,25 @@
         "flagvalue",
         "flatpickr",
         "français",
+        "fullcalendar",
         "GRADESETUP",
         "GRADINGSYSTEMS",
         "gridjs",
         "iconview",
         "landingnft",
+        "lenaers",
+        "lightbox",
         "listjs",
         "lockscreen",
         "lordicon",
         "MANAGEUSERS",
         "MASTERSHEETS",
         "Matricul",
+        "metismenujs",
         "multimonth",
+        "ngrx",
+        "nicky",
+        "popperjs",
         "REGISTERRESULTS",
         "remixicon",
         "REPORTCARDS",
@@ -43,6 +50,7 @@
         "Swal",
         "sweetalert",
         "TEACHERATTENDANCE",
+        "timegrid",
         "topbar",
         "twocolumn",
         "twostep",
