feat: Refactor student registration module and components; implement form handling, loading states, and API integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "Rightsidebar",
         "semibox",
         "simplebar",
+        "steparrow",
         "STUDENTATTENDANCE",
         "Swal",
         "sweetalert",
