feat: Implement Excel import/export functionality and enhance student registration with sample template support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "bytecreed",
         "childitem",
         "childrenitem",
+        "Chinedu",
         "collapseid",
         "Coverflow",
         "coverflowslide",
@@ -28,6 +29,7 @@
         "landingnft",
         "lenaers",
         "lightbox",
+        "Linh",
         "listjs",
         "lockscreen",
         "lordicon",
@@ -36,8 +38,11 @@
         "Matricul",
         "metismenujs",
         "multimonth",
+        "Nfor",
         "ngrx",
+        "Ngwa",
         "nicky",
+        "Okeke",
         "popperjs",
         "REGISTERRESULTS",
         "remixicon",
@@ -50,6 +55,8 @@
         "STUDENTATTENDANCE",
         "Swal",
         "sweetalert",
+        "Tabeh",
+        "Tamnjong",
         "TEACHERATTENDANCE",
         "timegrid",
         "topbar",
