--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.12.0",
     "tslib": "^2.6.3",
+    "xlsx": "^0.18.5",
     "zone.js": "^0.14.7"
   },
   "devDependencies": {
