feat: Implement PDF generation functionality for student subjects and update related components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "GRADINGSYSTEMS",
         "gridjs",
         "iconview",
+        "jspdf",
         "landingnft",
         "lenaers",
         "lightbox",
