--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "firebase": "^10.12.2",
     "flatpickr": "^4.6.13",
     "fuzzy-search": "^3.2.1",
+    "html2canvas": "^1.4.1",
     "intersection-observer": "^0.12.2",
     "jasmine-core": "^5.1.2",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
