feat: Add "BASEUI" to cSpell words in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "apexcharts",
         "artboard",
         "asymmetrik",
+        "BASEUI",
         "bytecreed",
         "childitem",
         "childrenitem",
