feat: Enhance personnel management with employee registration and CRUD functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,17 +8,23 @@
         "apexcharts",
         "artboard",
         "asymmetrik",
+        "Backgroun",
         "BASEUI",
         "bytecreed",
+        "changelayout",
         "childitem",
         "childrenitem",
         "Chinedu",
         "collapseid",
         "Coverflow",
         "coverflowslide",
+        "customizer",
+        "DARKMODE",
         "datatable",
         "daygrid",
+        "droup",
         "EXAMTYPES",
+        "filtetcontent",
         "flagvalue",
         "flatpickr",
         "français",
@@ -31,6 +37,7 @@
         "landingnft",
         "lenaers",
         "lightbox",
+        "LIGHTMODE",
         "Linh",
         "listjs",
         "lockscreen",
@@ -45,14 +52,19 @@
         "Ngwa",
         "nicky",
         "Okeke",
+        "PERLOADER",
         "popperjs",
+        "Progile",
         "REGISTERRESULTS",
         "remixicon",
         "REPORTCARDS",
         "RESULTHISTORY",
         "Rightsidebar",
         "semibox",
+        "sidebarsize",
+        "sidebarvisibility",
         "simplebar",
+        "SMALLHOVER",
         "steparrow",
         "STUDENTATTENDANCE",
         "Swal",
@@ -60,10 +72,12 @@
         "Tabeh",
         "Tamnjong",
         "TEACHERATTENDANCE",
+        "themecolor",
         "timegrid",
         "topbar",
         "twocolumn",
         "twostep",
-        "valueset"
+        "valueset",
+        "Visibilitye"
     ]
 }
