feat: Add results module with routing, components, and styles for register results and result history

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "asymmetrik",
         "Backgroun",
         "BASEUI",
+        "bord",
         "bytecreed",
         "changelayout",
         "childitem",
