--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,10 @@
         "Ngwa",
         "nicky",
         "Okeke",
+        "ONETAP",
+        "OTPLESS",
         "PERLOADER",
+        "Pless",
         "popperjs",
         "Progile",
         "REGISTERRESULTS",
