Add system configuration menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "STUDENTATTENDANCE",
         "Swal",
         "sweetalert",
+        "SYSTEMSETTINGS",
         "Tabeh",
         "Tamnjong",
         "TEACHERATTENDANCE",
