Add user logs menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "apexcharts",
         "artboard",
         "asymmetrik",
+        "AUDITLOGS",
         "Backgroun",
         "BASEUI",
         "bord",
