--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "remixicon",
         "REPORTCARDS",
         "RESULTHISTORY",
+        "RESULTREPORTS",
         "Rightsidebar",
         "semibox",
         "sidebarsize",
@@ -73,6 +74,7 @@
         "SMALLHOVER",
         "steparrow",
         "STUDENTATTENDANCE",
+        "STUDENTREPORTS",
         "Swal",
         "sweetalert",
         "SYSTEMSETTINGS",
