Add bursary module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "BASEUI",
         "bord",
         "bytecreed",
+        "CASHDESK",
         "changelayout",
         "childitem",
         "childrenitem",
