work in progress fee module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "childitem",
         "childrenitem",
         "Chinedu",
+        "CLASSFEETYPES",
         "collapseid",
         "Coverflow",
         "coverflowslide",
@@ -27,6 +28,7 @@
         "daygrid",
         "droup",
         "EXAMTYPES",
+        "FEETYPES",
         "filtetcontent",
         "flagvalue",
         "flatpickr",
@@ -75,6 +77,7 @@
         "SMALLHOVER",
         "steparrow",
         "STUDENTATTENDANCE",
+        "STUDENTFEETYPES",
         "STUDENTREPORTS",
         "Swal",
         "sweetalert",
