Add accounting menu items and update translations for payment archive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "bytecreed",
         "CASHDESK",
         "changelayout",
+        "CHARTOFACCOUNTS",
         "childitem",
         "childrenitem",
         "Chinedu",
@@ -60,6 +61,8 @@
         "Okeke",
         "ONETAP",
         "OTPLESS",
+        "PAYMENTARCHIEVE",
+        "PAYMENTARCHIVE",
         "PERLOADER",
         "Pless",
         "popperjs",
