Add financial reports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,10 @@
         "daygrid",
         "droup",
         "EXAMTYPES",
+        "FEEREPORTS",
         "FEETYPES",
         "filtetcontent",
+        "FINANCIALREPORTS",
         "flagvalue",
         "flatpickr",
         "français",
